test/assets/error/from_include.hera
#include "included.hera"  // error!

SET(R1, R2)  // error!
